[package]
version = "0.0.0"
name = "code0-flow"
edition = "2021"
description = "Crate for managing the code0-flows inside of the Flow Queue & FlowStore"
repository = "https://github.com/code0-tech/code0-flow"
homepage = "https://code0.tech"
license = "Apache-2.0"

[dependencies]
tucana = { version = "0.0.17", features = ["all"] }
tokio = "1.43.0"
async-trait = "0.1.85"
log = "0.4.24"
redis = { version = "0.28.0", features = ["aio"] }
serde_json = "1.0.138"
rabbitmq-stream-client = "0.7.0"

[lib]
doctest = true

[features]
flow_queue = []
flow_store = []
all = ["flow_queue", "flow_store"]